pychacheを無視する

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ commviz/__pycache__/wsgi.cpython-39.pyc
 polls/__pycache__/__init__.cpython-39.pyc
 polls/__pycache__/urls.cpython-39.pyc
 polls/__pycache__/views.cpython-39.pyc
+commviz_server/__pycache__/*.pyc
